--- a/appointmentapp.html
+++ b/appointmentapp.html
@@ -67,14 +67,14 @@
         <form id="form-1" autocomplete="on">
         <header>
         <h2>
-            BOOK TAXI FOR MANALI TO ROHTANG
+            BOOK TAXI FROM MANALI TO LEH
         </h2>
         </header>
         <label for="Name">Name</label><br>
-        <input type="text" id="Name" >
+        <input type="text" name='username' id="Name" >
         <br><br>
         <label for="Mail">Email ID</label><br>
-        <input type="text" id="Mail">
+        <input type="text" name="useremail" id="Mail">
         <br><br>
         <input type="submit" id="hit_me" value="HIT ME">
         <ul class="for_ul"></ul>
